--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: macos-latest
 
     steps: 
+      - name: ls
+        run: ls - la
+        
       - uses: actions/checkout@v3
       - name: build_cpp
         run: |
