--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -9,14 +9,14 @@ on:
   workflow_dispatch:
       
 jobs:
-  build_cpp_file:
+  build:
     runs-on: macos-latest
 
     steps:
-        
+      - name: Checkout the code
       - uses: actions/checkout@v3
       
-      - name: build_cpp
+      - name: build cpp app
         run: |
           g++ Main.cpp -o first.o
     
