--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: build cpp app
         run: |
-          g++ Main.cpp -o first.o
+          g++ Main.cpp -o first
     
       - name: Upload a Build Artifact
       - uses: aactions/upload-artifact@v3.1.2
