--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -21,7 +21,7 @@ jobs:
           g++ Main.cpp -o first.o
     
       - name: Upload a Build Artifact
-        uses: aactions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: cpp_app
           path: first.o
