--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -18,7 +18,7 @@ jobs:
       
       - name: build cpp app
         run: |
-          g++ Main.cpp - first.o
+          g++ Main.cpp -o first.o
     
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
