--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -10,7 +10,7 @@ on:
       
 jobs:
   build_cpp_file:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout the code
