--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -28,21 +28,21 @@ jobs:
           path: first_lin.o
           retention-days: 7
           
-  build_cpp_mac:
-    runs-on: macos-latest
+#   build_cpp_mac:
+#     runs-on: macos-latest
 
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout the code
+#         uses: actions/checkout@v3
       
-      - name: build cpp app
-        run: |
-          sudo apt-get update
-          g++ Main.cpp Func.cpp Func.h -o first_mac.o
+#       - name: build cpp app
+#         run: |
+#           sudo apt-get update
+#           g++ Main.cpp Func.cpp Func.h -o first_mac.o
     
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: cpp_app
-          path: first_mac.o
-          retention-days: 7
+#       - name: Upload a Build Artifact
+#         uses: actions/upload-artifact@v3.1.2
+#         with:
+#           name: cpp_app
+#           path: first_mac.o
+#           retention-days: 7
