--- a/.github/workflows/laba_1.yml
+++ b/.github/workflows/laba_1.yml
@@ -29,4 +29,17 @@ jobs:
           name: cpp_app
           path: ${{ env.app_name }}
           retention-days: 7
+          
+  add_to_dockerhub:
+    runs-on: ubuntu-latest
+    needs: build_cpp_lin
+    steps:          
+      - uses: actions/checkout@v3
+      - name: publish to dockerhub
+        uses: elgohr/Publish-Docker-Github-Action@v5
+        with:
+          name: disob/laba_2
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          dockerfile: Dockerfile
         
